Change how files are saved in normalize.ipynb

--- a/data/normalize.ipynb
+++ b/data/normalize.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,60 +27,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_dir = \"/localscratch/project/data2d/train_images2D/images\"\n",
     "val_dir = \"/localscratch/project/data2d/val_images2D/images\"\n",
-    "test_dir = \"/localscratch/project/data2d/exceptionals/test_images2D/images\""
+    "test_dir = \"/localscratch/project/data2d/exceptionals/test_images2D/images\"\n",
+    "mask_img_dir = \"/localscratch/project/data2d/train_images2D/masks\"\n",
+    "mask_val_dir = \"/localscratch/project/data2d/val_images2D/masks\"\n",
+    "mask_test_dir = \"/localscratch/project/data2d/exceptionals/test_images2D/masks\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "image_files = list(Path(img_dir).rglob(\"*.tif\"))\n",
     "val_files = list(Path(val_dir).rglob(\"*.tif\"))\n",
-    "test_files = list(Path(test_dir).rglob(\"*.tif\"))"
+    "test_files = list(Path(test_dir).rglob(\"*.tif\"))\n",
+    "mask_files = list(Path(mask_img_dir).rglob(\"*.tif\"))\n",
+    "mask_val_files = list(Path(mask_val_dir).rglob(\"*.tif\"))\n",
+    "mask_test_files = list(Path(mask_test_dir).rglob(\"*.tif\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "images_array = np.stack([tifffile.imread(str(f)) for f in image_files])\n",
     "val_array = np.stack([tifffile.imread(str(f)) for f in val_files])\n",
-    "test_array = np.stack([tifffile.imread(str(f)) for f in test_files])"
+    "test_array = np.stack([tifffile.imread(str(f)) for f in test_files])\n",
+    "mask_array = np.stack([tifffile.imread(str(f)) for f in mask_files])\n",
+    "mask_val_array = np.stack([tifffile.imread(str(f)) for f in mask_val_files])\n",
+    "mask_test_array = np.stack([tifffile.imread(str(f)) for f in mask_test_files])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26897"
+       "PosixPath('/localscratch/project/data2d/train_images2D/images/MAX_C4-16122021_Label44_CD16_367L_w1_closetolabel_100x_0.21_02.vsi - 405, 488, 561, 640.tif.scaled.tif')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "images_array.max()"
+    "image_files[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,57 +112,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_45312/3440048721.py:3: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
-      "  tifffile.imsave(f\"/localscratch/project/data2d/norm_img/train/images/img_{i}.tif\", img_norm)\n",
-      "/tmp/ipykernel_45312/3440048721.py:7: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
-      "  tifffile.imsave(f\"/localscratch/project/data2d/norm_img/val/images/img_{i}.tif\", val_norm)\n",
-      "/tmp/ipykernel_45312/3440048721.py:11: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
-      "  tifffile.imsave(f\"/localscratch/project/data2d/norm_img/test/images/img_{i}.tif\", test_norm)\n"
+      "/tmp/ipykernel_50431/1755323669.py:3: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "  tifffile.imsave(f\"/localscratch/project/data2d/norm_img/train/images/{image_files[i].name}\", img_norm)\n",
+      "/tmp/ipykernel_50431/1755323669.py:7: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "  tifffile.imsave(f\"/localscratch/project/data2d/norm_img/val/images/{val_files[i].name}\", val_norm)\n",
+      "/tmp/ipykernel_50431/1755323669.py:11: DeprecationWarning: <tifffile.imsave> is deprecated. Use tifffile.imwrite\n",
+      "  tifffile.imsave(f\"/localscratch/project/data2d/norm_img/test/images/{test_files[i].name}\", test_norm)\n"
      ]
     }
    ],
    "source": [
-    "for i, img in enumerate(images_array):\n",
+    "for i, img in enumerate(images_array): #TODO load images and masks at the same and name them together\n",
     "    img_norm = normalize(img, data_type = np.uint16)\n",
-    "    tifffile.imsave(f\"/localscratch/project/data2d/norm_img/train/images/img_{i}.tif\", img_norm)\n",
+    "    tifffile.imsave(f\"/localscratch/project/data2d/norm_img/train/images/{image_files[i].name}\", img_norm)\n",
     "\n",
     "for i, img in enumerate(val_array):\n",
     "    val_norm = normalize(img, data_type = np.uint16)\n",
-    "    tifffile.imsave(f\"/localscratch/project/data2d/norm_img/val/images/img_{i}.tif\", val_norm)\n",
+    "    tifffile.imsave(f\"/localscratch/project/data2d/norm_img/val/images/{val_files[i].name}\", val_norm)\n",
     "               \n",
-    "for i, img in enumerate(val_array):\n",
+    "for i, img in enumerate(test_array):\n",
     "    test_norm = normalize(img, data_type = np.uint16)\n",
-    "    tifffile.imsave(f\"/localscratch/project/data2d/norm_img/test/images/img_{i}.tif\", test_norm)"
+    "    tifffile.imsave(f\"/localscratch/project/data2d/norm_img/test/images/{test_files[i].name}\", test_norm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = tifffile.imread(\"/localscratch/project/data2d/norm_img/test/images/img_2.tif\")"
+    "img = tifffile.imread(\"/localscratch/project/data2d/norm_img/test/images/MAX_C3-26012022_Label48_t2_100x_0.21_03_POS_current.vsi - 405, 488, 640.tif\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "65535"
+       "65534"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +182,7 @@
        "0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +202,7 @@
        "(20, 2304, 2304)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
