--- a/notebook/training_sampler.ipynb
+++ b/notebook/training_sampler.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0c08b95d-a917-4ff6-8034-f47dd9d58e40",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "11316e6b-3fd6-4e6a-9e1d-3e13b3de7286",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b60e5938-76e1-4e1d-95ee-b6c16a0ba3ad",
    "metadata": {
     "scrolled": true
@@ -78,35 +78,405 @@
      "output_type": "stream",
      "text": [
       "epoch: 0\n",
-      "Train Epoch: 0 [0/200 (0%)]\tLoss: 0.957199\n",
+      "Train Epoch: 0 [0/200 (0%)]\tLoss: 0.044085\n",
       "epoch: 1\n",
-      "Train Epoch: 1 [0/200 (0%)]\tLoss: 0.944440\n",
+      "Train Epoch: 1 [0/200 (0%)]\tLoss: 0.009880\n",
       "epoch: 2\n",
-      "Train Epoch: 2 [0/200 (0%)]\tLoss: 0.935052\n",
+      "Train Epoch: 2 [0/200 (0%)]\tLoss: 0.004258\n",
       "epoch: 3\n",
-      "Train Epoch: 3 [0/200 (0%)]\tLoss: 0.926826\n",
+      "Train Epoch: 3 [0/200 (0%)]\tLoss: 0.003900\n",
       "epoch: 4\n",
-      "Train Epoch: 4 [0/200 (0%)]\tLoss: 0.907741\n",
+      "Train Epoch: 4 [0/200 (0%)]\tLoss: 0.004904\n",
       "epoch: 5\n",
-      "Train Epoch: 5 [0/200 (0%)]\tLoss: 0.895562\n",
+      "Train Epoch: 5 [0/200 (0%)]\tLoss: 0.010358\n",
       "epoch: 6\n",
-      "Train Epoch: 6 [0/200 (0%)]\tLoss: 0.886091\n",
+      "Train Epoch: 6 [0/200 (0%)]\tLoss: 0.006228\n",
       "epoch: 7\n",
-      "Train Epoch: 7 [0/200 (0%)]\tLoss: 0.866633\n",
+      "Train Epoch: 7 [0/200 (0%)]\tLoss: 0.004499\n",
       "epoch: 8\n",
-      "Train Epoch: 8 [0/200 (0%)]\tLoss: 0.830714\n",
+      "Train Epoch: 8 [0/200 (0%)]\tLoss: 0.003485\n",
       "epoch: 9\n",
-      "Train Epoch: 9 [0/200 (0%)]\tLoss: 0.817395\n",
+      "Train Epoch: 9 [0/200 (0%)]\tLoss: 0.004906\n",
       "epoch: 10\n",
-      "Train Epoch: 10 [0/200 (0%)]\tLoss: 0.784808\n",
+      "Train Epoch: 10 [0/200 (0%)]\tLoss: 0.007041\n",
       "epoch: 11\n",
-      "Train Epoch: 11 [0/200 (0%)]\tLoss: 0.762292\n",
+      "Train Epoch: 11 [0/200 (0%)]\tLoss: 0.002568\n",
       "epoch: 12\n",
-      "Train Epoch: 12 [0/200 (0%)]\tLoss: 0.745425\n",
+      "Train Epoch: 12 [0/200 (0%)]\tLoss: 0.003984\n",
       "epoch: 13\n",
-      "Train Epoch: 13 [0/200 (0%)]\tLoss: 0.724814\n",
+      "Train Epoch: 13 [0/200 (0%)]\tLoss: 0.002545\n",
       "epoch: 14\n",
-      "Train Epoch: 14 [0/200 (0%)]\tLoss: 0.719780\n"
+      "Train Epoch: 14 [0/200 (0%)]\tLoss: 0.004069\n",
+      "epoch: 15\n",
+      "Train Epoch: 15 [0/200 (0%)]\tLoss: 0.002563\n",
+      "epoch: 16\n",
+      "Train Epoch: 16 [0/200 (0%)]\tLoss: 0.003689\n",
+      "epoch: 17\n",
+      "Train Epoch: 17 [0/200 (0%)]\tLoss: 0.002703\n",
+      "epoch: 18\n",
+      "Train Epoch: 18 [0/200 (0%)]\tLoss: 0.003730\n",
+      "epoch: 19\n",
+      "Train Epoch: 19 [0/200 (0%)]\tLoss: 0.004727\n",
+      "epoch: 20\n",
+      "Train Epoch: 20 [0/200 (0%)]\tLoss: 0.007573\n",
+      "epoch: 21\n",
+      "Train Epoch: 21 [0/200 (0%)]\tLoss: 0.002290\n",
+      "epoch: 22\n",
+      "Train Epoch: 22 [0/200 (0%)]\tLoss: 0.002099\n",
+      "epoch: 23\n",
+      "Train Epoch: 23 [0/200 (0%)]\tLoss: 0.007924\n",
+      "epoch: 24\n",
+      "Train Epoch: 24 [0/200 (0%)]\tLoss: 0.003377\n",
+      "epoch: 25\n",
+      "Train Epoch: 25 [0/200 (0%)]\tLoss: 0.002634\n",
+      "epoch: 26\n",
+      "Train Epoch: 26 [0/200 (0%)]\tLoss: 0.002203\n",
+      "epoch: 27\n",
+      "Train Epoch: 27 [0/200 (0%)]\tLoss: 0.001257\n",
+      "epoch: 28\n",
+      "Train Epoch: 28 [0/200 (0%)]\tLoss: 0.001809\n",
+      "epoch: 29\n",
+      "Train Epoch: 29 [0/200 (0%)]\tLoss: 0.002803\n",
+      "epoch: 30\n",
+      "Train Epoch: 30 [0/200 (0%)]\tLoss: 0.001611\n",
+      "epoch: 31\n",
+      "Train Epoch: 31 [0/200 (0%)]\tLoss: 0.004777\n",
+      "epoch: 32\n",
+      "Train Epoch: 32 [0/200 (0%)]\tLoss: 0.002026\n",
+      "epoch: 33\n",
+      "Train Epoch: 33 [0/200 (0%)]\tLoss: 0.001363\n",
+      "epoch: 34\n",
+      "Train Epoch: 34 [0/200 (0%)]\tLoss: 0.001029\n",
+      "epoch: 35\n",
+      "Train Epoch: 35 [0/200 (0%)]\tLoss: 0.000941\n",
+      "epoch: 36\n",
+      "Train Epoch: 36 [0/200 (0%)]\tLoss: 0.001811\n",
+      "epoch: 37\n",
+      "Train Epoch: 37 [0/200 (0%)]\tLoss: 0.001548\n",
+      "epoch: 38\n",
+      "Train Epoch: 38 [0/200 (0%)]\tLoss: 0.001803\n",
+      "epoch: 39\n",
+      "Train Epoch: 39 [0/200 (0%)]\tLoss: 0.000919\n",
+      "epoch: 40\n",
+      "Train Epoch: 40 [0/200 (0%)]\tLoss: 0.001117\n",
+      "epoch: 41\n",
+      "Train Epoch: 41 [0/200 (0%)]\tLoss: 0.001255\n",
+      "epoch: 42\n",
+      "Train Epoch: 42 [0/200 (0%)]\tLoss: 0.005175\n",
+      "epoch: 43\n",
+      "Train Epoch: 43 [0/200 (0%)]\tLoss: 0.001248\n",
+      "epoch: 44\n",
+      "Train Epoch: 44 [0/200 (0%)]\tLoss: 0.002709\n",
+      "epoch: 45\n",
+      "Train Epoch: 45 [0/200 (0%)]\tLoss: 0.001342\n",
+      "epoch: 46\n",
+      "Train Epoch: 46 [0/200 (0%)]\tLoss: 0.001210\n",
+      "epoch: 47\n",
+      "Train Epoch: 47 [0/200 (0%)]\tLoss: 0.001013\n",
+      "epoch: 48\n",
+      "Train Epoch: 48 [0/200 (0%)]\tLoss: 0.000875\n",
+      "epoch: 49\n",
+      "Train Epoch: 49 [0/200 (0%)]\tLoss: 0.001490\n",
+      "epoch: 50\n",
+      "Train Epoch: 50 [0/200 (0%)]\tLoss: 0.001164\n",
+      "epoch: 51\n",
+      "Train Epoch: 51 [0/200 (0%)]\tLoss: 0.002344\n",
+      "epoch: 52\n",
+      "Train Epoch: 52 [0/200 (0%)]\tLoss: 0.002273\n",
+      "epoch: 53\n",
+      "Train Epoch: 53 [0/200 (0%)]\tLoss: 0.000977\n",
+      "epoch: 54\n",
+      "Train Epoch: 54 [0/200 (0%)]\tLoss: 0.000912\n",
+      "epoch: 55\n",
+      "Train Epoch: 55 [0/200 (0%)]\tLoss: 0.001523\n",
+      "epoch: 56\n",
+      "Train Epoch: 56 [0/200 (0%)]\tLoss: 0.004087\n",
+      "epoch: 57\n",
+      "Train Epoch: 57 [0/200 (0%)]\tLoss: 0.000956\n",
+      "epoch: 58\n",
+      "Train Epoch: 58 [0/200 (0%)]\tLoss: 0.001850\n",
+      "epoch: 59\n",
+      "Train Epoch: 59 [0/200 (0%)]\tLoss: 0.000644\n",
+      "epoch: 60\n",
+      "Train Epoch: 60 [0/200 (0%)]\tLoss: 0.000858\n",
+      "epoch: 61\n",
+      "Train Epoch: 61 [0/200 (0%)]\tLoss: 0.000656\n",
+      "epoch: 62\n",
+      "Train Epoch: 62 [0/200 (0%)]\tLoss: 0.002726\n",
+      "epoch: 63\n",
+      "Train Epoch: 63 [0/200 (0%)]\tLoss: 0.000881\n",
+      "epoch: 64\n",
+      "Train Epoch: 64 [0/200 (0%)]\tLoss: 0.000739\n",
+      "epoch: 65\n",
+      "Train Epoch: 65 [0/200 (0%)]\tLoss: 0.005842\n",
+      "epoch: 66\n",
+      "Train Epoch: 66 [0/200 (0%)]\tLoss: 0.000507\n",
+      "epoch: 67\n",
+      "Train Epoch: 67 [0/200 (0%)]\tLoss: 0.000930\n",
+      "epoch: 68\n",
+      "Train Epoch: 68 [0/200 (0%)]\tLoss: 0.001589\n",
+      "epoch: 69\n",
+      "Train Epoch: 69 [0/200 (0%)]\tLoss: 0.002026\n",
+      "epoch: 70\n",
+      "Train Epoch: 70 [0/200 (0%)]\tLoss: 0.001303\n",
+      "epoch: 71\n",
+      "Train Epoch: 71 [0/200 (0%)]\tLoss: 0.001877\n",
+      "epoch: 72\n",
+      "Train Epoch: 72 [0/200 (0%)]\tLoss: 0.000572\n",
+      "epoch: 73\n",
+      "Train Epoch: 73 [0/200 (0%)]\tLoss: 0.000895\n",
+      "epoch: 74\n",
+      "Train Epoch: 74 [0/200 (0%)]\tLoss: 0.002007\n",
+      "epoch: 75\n",
+      "Train Epoch: 75 [0/200 (0%)]\tLoss: 0.001828\n",
+      "epoch: 76\n",
+      "Train Epoch: 76 [0/200 (0%)]\tLoss: 0.002521\n",
+      "epoch: 77\n",
+      "Train Epoch: 77 [0/200 (0%)]\tLoss: 0.000412\n",
+      "epoch: 78\n",
+      "Train Epoch: 78 [0/200 (0%)]\tLoss: 0.000473\n",
+      "epoch: 79\n",
+      "Train Epoch: 79 [0/200 (0%)]\tLoss: 0.002115\n",
+      "epoch: 80\n",
+      "Train Epoch: 80 [0/200 (0%)]\tLoss: 0.001867\n",
+      "epoch: 81\n",
+      "Train Epoch: 81 [0/200 (0%)]\tLoss: 0.000812\n",
+      "epoch: 82\n",
+      "Train Epoch: 82 [0/200 (0%)]\tLoss: 0.000503\n",
+      "epoch: 83\n",
+      "Train Epoch: 83 [0/200 (0%)]\tLoss: 0.000559\n",
+      "epoch: 84\n",
+      "Train Epoch: 84 [0/200 (0%)]\tLoss: 0.000876\n",
+      "epoch: 85\n",
+      "Train Epoch: 85 [0/200 (0%)]\tLoss: 0.000964\n",
+      "epoch: 86\n",
+      "Train Epoch: 86 [0/200 (0%)]\tLoss: 0.000460\n",
+      "epoch: 87\n",
+      "Train Epoch: 87 [0/200 (0%)]\tLoss: 0.000764\n",
+      "epoch: 88\n",
+      "Train Epoch: 88 [0/200 (0%)]\tLoss: 0.000404\n",
+      "epoch: 89\n",
+      "Train Epoch: 89 [0/200 (0%)]\tLoss: 0.000483\n",
+      "epoch: 90\n",
+      "Train Epoch: 90 [0/200 (0%)]\tLoss: 0.002802\n",
+      "epoch: 91\n",
+      "Train Epoch: 91 [0/200 (0%)]\tLoss: 0.000778\n",
+      "epoch: 92\n",
+      "Train Epoch: 92 [0/200 (0%)]\tLoss: 0.002353\n",
+      "epoch: 93\n",
+      "Train Epoch: 93 [0/200 (0%)]\tLoss: 0.001628\n",
+      "epoch: 94\n",
+      "Train Epoch: 94 [0/200 (0%)]\tLoss: 0.000738\n",
+      "epoch: 95\n",
+      "Train Epoch: 95 [0/200 (0%)]\tLoss: 0.000593\n",
+      "epoch: 96\n",
+      "Train Epoch: 96 [0/200 (0%)]\tLoss: 0.001417\n",
+      "epoch: 97\n",
+      "Train Epoch: 97 [0/200 (0%)]\tLoss: 0.000371\n",
+      "epoch: 98\n",
+      "Train Epoch: 98 [0/200 (0%)]\tLoss: 0.002393\n",
+      "epoch: 99\n",
+      "Train Epoch: 99 [0/200 (0%)]\tLoss: 0.000418\n",
+      "epoch: 100\n",
+      "Train Epoch: 100 [0/200 (0%)]\tLoss: 0.000929\n",
+      "epoch: 101\n",
+      "Train Epoch: 101 [0/200 (0%)]\tLoss: 0.002431\n",
+      "epoch: 102\n",
+      "Train Epoch: 102 [0/200 (0%)]\tLoss: 0.000399\n",
+      "epoch: 103\n",
+      "Train Epoch: 103 [0/200 (0%)]\tLoss: 0.001693\n",
+      "epoch: 104\n",
+      "Train Epoch: 104 [0/200 (0%)]\tLoss: 0.000372\n",
+      "epoch: 105\n",
+      "Train Epoch: 105 [0/200 (0%)]\tLoss: 0.000543\n",
+      "epoch: 106\n",
+      "Train Epoch: 106 [0/200 (0%)]\tLoss: 0.000607\n",
+      "epoch: 107\n",
+      "Train Epoch: 107 [0/200 (0%)]\tLoss: 0.001079\n",
+      "epoch: 108\n",
+      "Train Epoch: 108 [0/200 (0%)]\tLoss: 0.000413\n",
+      "epoch: 109\n",
+      "Train Epoch: 109 [0/200 (0%)]\tLoss: 0.002094\n",
+      "epoch: 110\n",
+      "Train Epoch: 110 [0/200 (0%)]\tLoss: 0.001222\n",
+      "epoch: 111\n",
+      "Train Epoch: 111 [0/200 (0%)]\tLoss: 0.000401\n",
+      "epoch: 112\n",
+      "Train Epoch: 112 [0/200 (0%)]\tLoss: 0.000705\n",
+      "epoch: 113\n",
+      "Train Epoch: 113 [0/200 (0%)]\tLoss: 0.000340\n",
+      "epoch: 114\n",
+      "Train Epoch: 114 [0/200 (0%)]\tLoss: 0.002917\n",
+      "epoch: 115\n",
+      "Train Epoch: 115 [0/200 (0%)]\tLoss: 0.001610\n",
+      "epoch: 116\n",
+      "Train Epoch: 116 [0/200 (0%)]\tLoss: 0.000591\n",
+      "epoch: 117\n",
+      "Train Epoch: 117 [0/200 (0%)]\tLoss: 0.001175\n",
+      "epoch: 118\n",
+      "Train Epoch: 118 [0/200 (0%)]\tLoss: 0.000288\n",
+      "epoch: 119\n",
+      "Train Epoch: 119 [0/200 (0%)]\tLoss: 0.000878\n",
+      "epoch: 120\n",
+      "Train Epoch: 120 [0/200 (0%)]\tLoss: 0.000339\n",
+      "epoch: 121\n",
+      "Train Epoch: 121 [0/200 (0%)]\tLoss: 0.000641\n",
+      "epoch: 122\n",
+      "Train Epoch: 122 [0/200 (0%)]\tLoss: 0.000586\n",
+      "epoch: 123\n",
+      "Train Epoch: 123 [0/200 (0%)]\tLoss: 0.000457\n",
+      "epoch: 124\n",
+      "Train Epoch: 124 [0/200 (0%)]\tLoss: 0.000384\n",
+      "epoch: 125\n",
+      "Train Epoch: 125 [0/200 (0%)]\tLoss: 0.000342\n",
+      "epoch: 126\n",
+      "Train Epoch: 126 [0/200 (0%)]\tLoss: 0.000379\n",
+      "epoch: 127\n",
+      "Train Epoch: 127 [0/200 (0%)]\tLoss: 0.000260\n",
+      "epoch: 128\n",
+      "Train Epoch: 128 [0/200 (0%)]\tLoss: 0.000390\n",
+      "epoch: 129\n",
+      "Train Epoch: 129 [0/200 (0%)]\tLoss: 0.000629\n",
+      "epoch: 130\n",
+      "Train Epoch: 130 [0/200 (0%)]\tLoss: 0.000185\n",
+      "epoch: 131\n",
+      "Train Epoch: 131 [0/200 (0%)]\tLoss: 0.000255\n",
+      "epoch: 132\n",
+      "Train Epoch: 132 [0/200 (0%)]\tLoss: 0.000453\n",
+      "epoch: 133\n",
+      "Train Epoch: 133 [0/200 (0%)]\tLoss: 0.000319\n",
+      "epoch: 134\n",
+      "Train Epoch: 134 [0/200 (0%)]\tLoss: 0.000391\n",
+      "epoch: 135\n",
+      "Train Epoch: 135 [0/200 (0%)]\tLoss: 0.000349\n",
+      "epoch: 136\n",
+      "Train Epoch: 136 [0/200 (0%)]\tLoss: 0.000303\n",
+      "epoch: 137\n",
+      "Train Epoch: 137 [0/200 (0%)]\tLoss: 0.000285\n",
+      "epoch: 138\n",
+      "Train Epoch: 138 [0/200 (0%)]\tLoss: 0.001013\n",
+      "epoch: 139\n",
+      "Train Epoch: 139 [0/200 (0%)]\tLoss: 0.000697\n",
+      "epoch: 140\n",
+      "Train Epoch: 140 [0/200 (0%)]\tLoss: 0.000687\n",
+      "epoch: 141\n",
+      "Train Epoch: 141 [0/200 (0%)]\tLoss: 0.000533\n",
+      "epoch: 142\n",
+      "Train Epoch: 142 [0/200 (0%)]\tLoss: 0.000600\n",
+      "epoch: 143\n",
+      "Train Epoch: 143 [0/200 (0%)]\tLoss: 0.001011\n",
+      "epoch: 144\n",
+      "Train Epoch: 144 [0/200 (0%)]\tLoss: 0.000807\n",
+      "epoch: 145\n",
+      "Train Epoch: 145 [0/200 (0%)]\tLoss: 0.000220\n",
+      "epoch: 146\n",
+      "Train Epoch: 146 [0/200 (0%)]\tLoss: 0.000260\n",
+      "epoch: 147\n",
+      "Train Epoch: 147 [0/200 (0%)]\tLoss: 0.000677\n",
+      "epoch: 148\n",
+      "Train Epoch: 148 [0/200 (0%)]\tLoss: 0.001386\n",
+      "epoch: 149\n",
+      "Train Epoch: 149 [0/200 (0%)]\tLoss: 0.000317\n",
+      "epoch: 150\n",
+      "Train Epoch: 150 [0/200 (0%)]\tLoss: 0.000257\n",
+      "epoch: 151\n",
+      "Train Epoch: 151 [0/200 (0%)]\tLoss: 0.000361\n",
+      "epoch: 152\n",
+      "Train Epoch: 152 [0/200 (0%)]\tLoss: 0.000430\n",
+      "epoch: 153\n",
+      "Train Epoch: 153 [0/200 (0%)]\tLoss: 0.000162\n",
+      "epoch: 154\n",
+      "Train Epoch: 154 [0/200 (0%)]\tLoss: 0.000537\n",
+      "epoch: 155\n",
+      "Train Epoch: 155 [0/200 (0%)]\tLoss: 0.000505\n",
+      "epoch: 156\n",
+      "Train Epoch: 156 [0/200 (0%)]\tLoss: 0.000474\n",
+      "epoch: 157\n",
+      "Train Epoch: 157 [0/200 (0%)]\tLoss: 0.000853\n",
+      "epoch: 158\n",
+      "Train Epoch: 158 [0/200 (0%)]\tLoss: 0.000195\n",
+      "epoch: 159\n",
+      "Train Epoch: 159 [0/200 (0%)]\tLoss: 0.000320\n",
+      "epoch: 160\n",
+      "Train Epoch: 160 [0/200 (0%)]\tLoss: 0.000659\n",
+      "epoch: 161\n",
+      "Train Epoch: 161 [0/200 (0%)]\tLoss: 0.005542\n",
+      "epoch: 162\n",
+      "Train Epoch: 162 [0/200 (0%)]\tLoss: 0.000711\n",
+      "epoch: 163\n",
+      "Train Epoch: 163 [0/200 (0%)]\tLoss: 0.000488\n",
+      "epoch: 164\n",
+      "Train Epoch: 164 [0/200 (0%)]\tLoss: 0.000429\n",
+      "epoch: 165\n",
+      "Train Epoch: 165 [0/200 (0%)]\tLoss: 0.000229\n",
+      "epoch: 166\n",
+      "Train Epoch: 166 [0/200 (0%)]\tLoss: 0.003942\n",
+      "epoch: 167\n",
+      "Train Epoch: 167 [0/200 (0%)]\tLoss: 0.000572\n",
+      "epoch: 168\n",
+      "Train Epoch: 168 [0/200 (0%)]\tLoss: 0.000456\n",
+      "epoch: 169\n",
+      "Train Epoch: 169 [0/200 (0%)]\tLoss: 0.001038\n",
+      "epoch: 170\n",
+      "Train Epoch: 170 [0/200 (0%)]\tLoss: 0.000290\n",
+      "epoch: 171\n",
+      "Train Epoch: 171 [0/200 (0%)]\tLoss: 0.000300\n",
+      "epoch: 172\n",
+      "Train Epoch: 172 [0/200 (0%)]\tLoss: 0.000354\n",
+      "epoch: 173\n",
+      "Train Epoch: 173 [0/200 (0%)]\tLoss: 0.000197\n",
+      "epoch: 174\n",
+      "Train Epoch: 174 [0/200 (0%)]\tLoss: 0.000520\n",
+      "epoch: 175\n",
+      "Train Epoch: 175 [0/200 (0%)]\tLoss: 0.000446\n",
+      "epoch: 176\n",
+      "Train Epoch: 176 [0/200 (0%)]\tLoss: 0.000394\n",
+      "epoch: 177\n",
+      "Train Epoch: 177 [0/200 (0%)]\tLoss: 0.000585\n",
+      "epoch: 178\n",
+      "Train Epoch: 178 [0/200 (0%)]\tLoss: 0.000161\n",
+      "epoch: 179\n",
+      "Train Epoch: 179 [0/200 (0%)]\tLoss: 0.001101\n",
+      "epoch: 180\n",
+      "Train Epoch: 180 [0/200 (0%)]\tLoss: 0.000292\n",
+      "epoch: 181\n",
+      "Train Epoch: 181 [0/200 (0%)]\tLoss: 0.000559\n",
+      "epoch: 182\n",
+      "Train Epoch: 182 [0/200 (0%)]\tLoss: 0.000192\n",
+      "epoch: 183\n",
+      "Train Epoch: 183 [0/200 (0%)]\tLoss: 0.000655\n",
+      "epoch: 184\n",
+      "Train Epoch: 184 [0/200 (0%)]\tLoss: 0.000493\n",
+      "epoch: 185\n",
+      "Train Epoch: 185 [0/200 (0%)]\tLoss: 0.000235\n",
+      "epoch: 186\n",
+      "Train Epoch: 186 [0/200 (0%)]\tLoss: 0.000124\n",
+      "epoch: 187\n",
+      "Train Epoch: 187 [0/200 (0%)]\tLoss: 0.000158\n",
+      "epoch: 188\n",
+      "Train Epoch: 188 [0/200 (0%)]\tLoss: 0.000324\n",
+      "epoch: 189\n",
+      "Train Epoch: 189 [0/200 (0%)]\tLoss: 0.000568\n",
+      "epoch: 190\n",
+      "Train Epoch: 190 [0/200 (0%)]\tLoss: 0.000658\n",
+      "epoch: 191\n",
+      "Train Epoch: 191 [0/200 (0%)]\tLoss: 0.000142\n",
+      "epoch: 192\n",
+      "Train Epoch: 192 [0/200 (0%)]\tLoss: 0.000937\n",
+      "epoch: 193\n",
+      "Train Epoch: 193 [0/200 (0%)]\tLoss: 0.000616\n",
+      "epoch: 194\n",
+      "Train Epoch: 194 [0/200 (0%)]\tLoss: 0.000505\n",
+      "epoch: 195\n",
+      "Train Epoch: 195 [0/200 (0%)]\tLoss: 0.000252\n",
+      "epoch: 196\n",
+      "Train Epoch: 196 [0/200 (0%)]\tLoss: 0.000415\n",
+      "epoch: 197\n",
+      "Train Epoch: 197 [0/200 (0%)]\tLoss: 0.000682\n",
+      "epoch: 198\n",
+      "Train Epoch: 198 [0/200 (0%)]\tLoss: 0.000439\n",
+      "epoch: 199\n",
+      "Train Epoch: 199 [0/200 (0%)]\tLoss: 0.000090\n"
      ]
     }
    ],
@@ -114,8 +484,8 @@
     "img_dir = \"/localscratch/project/data2d/norm_img/train/images\"\n",
     "mask_dir = \"/localscratch/project/data2d/train_images2D/masks\"\n",
     "\n",
-    "train(img_dir, mask_dir, num_epochs=15, batch_size=5, shuffle=True, num_workers=8,\n",
-    "          depth=3, in_channels=1, out_channels=1, num_fmaps=64, lr = 0.000001)"
+    "train(img_dir, mask_dir, num_epochs=200, batch_size=5, shuffle=True, num_workers=8,\n",
+    "          depth=3, in_channels=1, out_channels=1, num_fmaps=64, lr = 0.0001)"
    ]
   },
   {
