Create validation.ipynb and TestDataset

--- a/notebook/training_sampler.ipynb
+++ b/notebook/training_sampler.ipynb
@@ -59,6 +59,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "802673e7-78d7-470b-a872-eb4fbab6a9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_dir = \"/localscratch/project/data2d/norm_img/train/images\"\n",
+    "mask_dir = \"/localscratch/project/data2d/train_images2D/masks\"\n",
+    "\n",
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe9f7acf-c7c0-401a-99e6-b3dd0a568f1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "58e1972e-793c-4e07-8a42-c3e09cf07c16",
    "metadata": {},
